Solved Spelling mistake

--- a/notebooks/Domain.ipynb
+++ b/notebooks/Domain.ipynb
@@ -908,7 +908,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### **Bottom five major heads**"
+    "### **Bottom five Sub-major heads**"
    ]
   },
   {
